--- a/app/src/main/res/layout/fragment_fragment_rutas.xml
+++ b/app/src/main/res/layout/fragment_fragment_rutas.xml
@@ -14,8 +14,10 @@
             android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp" />
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/cisneros"
+                    android:layout_marginRight="12dp"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -26,11 +28,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Edificio Cisneros"
+                    android:textSize="19dp"
                     android:textColor="#000000"
                     android:textStyle="bold" />
                 <RatingBar
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="5"
+                    android:rating="4"
                     />
             </LinearLayout>
         </LinearLayout>
